[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yoos-app"
version = "1.0.0"
description = "Universal Author Voice Engine — analyze any author's style, generate content in their voice"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
gdrive = ["google-api-python-client>=2.100.0", "google-auth>=2.23.0"]
dev = ["pytest>=7.0"]

[project.scripts]
yoos-app = "yoos_app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yoos_app*"]
